# src/ITLabReports/transport/draft/http/handlers/v1/handlers.go
@@ -13,6 +13,23 @@ import (
 	kithttp "github.com/go-kit/kit/transport/http"
 )
 
+// GetDraft
+//
+// @Tags draft
+//
+// @Summary return a draft
+//
+// @Description.markdown get_draft
+//
+// @Router /reports/v1/draft/{id} [get]
+//
+// @Security ApiKeyAuth
+//
+// @Param id path string true "id of draft"
+//
+// @Produce json
+//
+// @Success 200 {object} dto.GetDraftResp
 func GetDraft(
 	e endpoints.Endpoints,
 ) http.Handler {
@@ -29,6 +46,21 @@ func GetDraft(
 	)
 }
 
+// GetDrafts
+//
+// @Tags draft
+//
+// @Summary return a drafts for user
+//
+// @Description.markdown get_drafts
+//
+// @Router /reports/v1/draft [get]
+//
+// @Security ApiKeyAuth
+//
+// @Produce json
+//
+// @Success 200 {object} dto.GetDraftsResp
 func GetDrafts(
 	e endpoints.Endpoints,
 ) http.Handler {
@@ -45,6 +77,23 @@ func GetDrafts(
 	)
 }
 
+// DeleteDraft
+//
+// @Tags draft
+//
+// @Summary delete a draft
+//
+// @Description.markdown delete_draft
+//
+// @Router /reports/v1/draft/{id} [delete]
+// 
+// @Param id path string true "id of draft"
+//
+// @Security ApiKeyAuth
+//
+// @Produce json,plain
+//
+// @Success 204
 func DeleteDraft(
 	e endpoints.Endpoints,
 ) http.Handler {
@@ -61,6 +110,27 @@ func DeleteDraft(
 	)
 }
 
+// UpdateDraft
+//
+// @Tags draft
+//
+// @Summary update a draft
+//
+// @Description.markdown update_draft
+//
+// @Router /reports/v1/draft/{id} [put]
+// 
+// @Param id path string true "id of draft"
+// 
+// @Param body body dto.UpdateDraftReq true "a body"
+//
+// @Security ApiKeyAuth
+//
+// @Accept json
+// 
+// @Produce json
+//
+// @Success 200 {object} dto.UpdateDraftResp
 func UpdateDraft(
 	e endpoints.Endpoints,
 ) http.Handler {
@@ -77,6 +147,27 @@ func UpdateDraft(
 	)
 }
 
+// CreateDraft
+//
+// @Tags draft
+//
+// @Summary create a draft
+//
+// @Description.markdown create_draft
+//
+// @Router /reports/v1/draft [post]
+// 
+// @Param body body dto.CreateDraftReq true "a body"
+// 
+// @Param implementer query string false "a id of implementer"
+//
+// @Security ApiKeyAuth
+//
+// @Accept json
+// 
+// @Produce json
+//
+// @Success 201 {object} dto.CreateDraftResp
 func CreateDraft(
 	e endpoints.Endpoints,
 ) http.Handler {
